--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -53,16 +53,16 @@
 				<p>ARGENTINA: (+5411) 5258·8788</p>
 				<p>URUGUAY: (+598) 2927·2347</p>
 				<p>contacto@urbanestate.com.ar</p>
-				<a href="#" target="_blank" style="color:#212529;">
+				<a href="http://www.facebook.com/urbanestatelive" target="_blank" style="color:#212529;">
 					<i class="bi bi-facebook pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="#" target="_blank" style="color:#212529;">
+				<a href="http://www.instagram.com/urbanestatelive" target="_blank" style="color:#212529;">
 					<i class="bi bi-instagram pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="#" target="_blank" style="color:#212529;">
+				<a href="https://www.youtube.com/@urbanestate4035" target="_blank" style="color:#212529;">
 					<i class="bi bi-youtube pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="#" target="_blank" style="color:#212529;">
+				<a href="https://www.linkedin.com/company/urban-estate-live/" target="_blank" style="color:#212529;">
 					<i class="bi bi-linkedin pe-4" style="font-size: 1.5rem;"></i>
 				</a>
 
