#38 Ajustes de diseño 1

--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -149,27 +149,27 @@
 
 			</div>
 			<div class="col-lg-5 col-md-12 offset-lg-1 mt-lg-0 mt-5 mb-2">
-				<h3>UNITE A LA FAMILIA</h3>
+				<h3>SUMATE A LA FAMILIA</h3>
 				<p>ARGENTINA: (+5411) 5258·8788</p>
 				<p>URUGUAY: (+598) 2927·2347</p>
 				<p>contacto@urbanestate.com.ar</p>
-				<a href="http://www.facebook.com/urbanestatelive" target="_blank" style="color:#212529;">
+				<a href="http://www.facebook.com/urbanestatelive" target="_blank">
 					<i class="bi bi-facebook pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="http://www.instagram.com/urbanestatelive" target="_blank" style="color:#212529;">
+				<a href="http://www.instagram.com/urbanestatelive" target="_blank">
 					<i class="bi bi-instagram pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="https://www.youtube.com/@urbanestate4035" target="_blank" style="color:#212529;">
+				<a href="https://www.youtube.com/@urbanestate4035" target="_blank">
 					<i class="bi bi-youtube pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="https://www.linkedin.com/company/urban-estate-live/" target="_blank" style="color:#212529;">
+				<a href="https://www.linkedin.com/company/urban-estate-live/" target="_blank">
 					<i class="bi bi-linkedin pe-4" style="font-size: 1.5rem;"></i>
 				</a>
 
 				<div class="container mt-5">
 					<h3 class="col-7 row">SUMATE AL STAFF</h3>
 					<div class="row">
-						<button class="col-6 btn btn-light btn-card mt-1 mb-2 ps-4 pe-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm">Adjuntar datos</button>
+						<button class="col-4 btn btn-secondary btn-card mt-1 mb-2 ps-4 pe-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm">Adjuntar datos</button>
 					</div>					
 					<div class="collapse" id="collapseForm">
 						<?php echo do_shortcode('[contact-form-7 id="216" title="Staff"]'); ?>
