--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -17,7 +17,8 @@
   <input type='hidden' name='zc_gad' id='zc_gad' value=''></input> 
   <input type='text' style='display:none;' name='xmIwtLD' value='9a12965a9d6b0a4c6e6e6c002444cade9f4c426bdf7179aea378b2e901ec3a05'></input> 
   <input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
-  <input type='text' style='display:none;' name='returnURL' value='http://urbanestate.com.ar' > </input><br></br>
+
+  <input type='text' style='display:none;' name='returnURL' value='http://dev.urbanestate.com.ar' > </input><br></br>
 	  <!-- Do not remove this code. -->
 	 <style>
 		 #crmWebToEntityForm tr , #crmWebToEntityForm td { 
@@ -26,7 +27,45 @@
 			 border-width:0px;
 			 }
 	 </style>
-	 <table style='width:600px;background-color:#ffffff;background-color:white;color:black'><tr><td colspan='2' align='left' style='color:black;font-family:Arial;font-size:14px;word-break: break-word;'><strong>Urban Estate Web</strong></td></tr> <br></br><tr><td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Nombre<span style='color:red;'>*</span></td><td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='40' name='First Name' /></td><td style='width:30%;'></td></tr><tr><td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Apellido<span style='color:red;'>*</span></td><td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='80' name='Last Name' /></td><td style='width:30%;'></td></tr><tr><td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Email<span style='color:red;'>*</span></td><td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='100' name='Email' /></td><td style='width:30%;'></td></tr><tr><td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Tel&eacute;fono</td><td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='30' name='Phone' /></td><td style='width:30%;'></td></tr><tr><td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Mensaje </td><td style='width:40%;'> <textarea name='Description' maxlength='32000' style='width:100%;'>&nbsp;</textarea></td><td style='width:30%;'></td></tr><tr><td></td><td><div class='g-recaptcha' data-sitekey='6LeUUfcUAAAAABSlqePdrrxomy5XdzSVxJsO8PBC' data-theme='light' data-callback='rccallback' captcha-verified='false' id='recap'></div></td><td></td></tr><tr style='display:none;' ><td style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%'>Emprendimiento</td><td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='255' name='LEADCF1' value='pepe'></input></td><td style='width:30%;'></td></tr><tr style='display:none;' ><td style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%'>Source</td><td style='width:40%;'>
+	 <table style='width:600px;background-color:#ffffff;background-color:white;color:black'>
+		<tr>
+			<td colspan='2' align='left' style='color:black;font-family:Arial;font-size:14px;word-break: break-word;'><strong>Urban Estate Web</strong></td>
+		</tr> <br></br>
+		<tr>
+			<td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Nombre<span style='color:red;'>*</span></td>
+			<td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='40' name='First Name' /></td>
+			<td style='width:30%;'></td>
+		</tr>
+		<tr>
+			<td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Apellido<span style='color:red;'>*</span></td>
+			<td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='80' name='Last Name' /></td>
+			<td style='width:30%;'></td></tr><tr><td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Email<span style='color:red;'>*</span></td>
+			<td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='100' name='Email' /></td>
+			<td style='width:30%;'></td>
+		</tr>
+		<tr>
+			<td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Tel&eacute;fono</td>
+			<td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='30' name='Phone' /></td>
+			<td style='width:30%;'></td>
+		</tr>
+		<tr>
+			<td  style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%;'>Mensaje </td>
+			<td style='width:40%;'> <textarea name='Description' maxlength='32000' style='width:100%;'>&nbsp;</textarea></td>
+			<td style='width:30%;'></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td><div class='g-recaptcha' data-sitekey='6LeUUfcUAAAAABSlqePdrrxomy5XdzSVxJsO8PBC' data-theme='light' data-callback='rccallback' captcha-verified='false' id='recap'></div></td>
+			<td></td>
+		</tr>
+		<tr style='display:none;' >
+			<td style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%'>Emprendimiento</td>
+			<td style='width:40%;' ><input type='text' style='width:100%;box-sizing:border-box;'  maxlength='255' name='LEADCF1' value='Contacto Web'></input></td>
+			<td style='width:30%;'></td>
+		</tr>
+		<tr style='display:none;' >
+			<td style='word-break: break-word;text-align:left;font-size:12px;font-family:Arial;width:30%'>Source</td>
+			<td style='width:40%;'>
 		 <select style='width:100%;box-sizing:border-box;' name='Lead Source'>
 			 <option value='-None-'>-None-</option>
 			 <option value='Juli&aacute;n&#x20;Genijovich'>Juli&aacute;n Genijovich</option>
@@ -40,7 +79,10 @@
 		 </select></td><td style='width:30%;'></td></tr>
  
 	 <tr><td colspan='2' style='text-align:center; padding-top:15px;font-size:12px;'>
-		 <input style='margin-right: 5px;cursor: pointer;font-size:12px;color:#000000' id='formsubmit' type='submit' value='Submit' disabled ></input> <input type='reset' name='reset' style='cursor: pointer;font-size:12px;color:#000000' value='Reset' ></input> </td></tr></table>
+		 <input style='margin-right: 5px;cursor: pointer;font-size:12px;color:#000000' id='formsubmit' type='submit' value='Submit' disabled ></input> 
+		 <input type='reset' name='reset' style='cursor: pointer;font-size:12px;color:#000000' value='Reset' ></input> </td>
+		</tr>
+	</table>
 	 <script>
 		var mndFileds=new Array('First Name','Last Name','Email');
 		var fldLangVal=new Array('Nombre','Apellido','Email'); 
@@ -108,27 +150,27 @@
 
 			</div>
 			<div class="col-lg-5 col-md-12 offset-lg-1 mt-lg-0 mt-5 mb-2">
-				<h3>UNITE A LA FAMILIA</h3>
+				<h3>SUMATE A LA FAMILIA</h3>
 				<p>ARGENTINA: (+5411) 5258·8788</p>
 				<p>URUGUAY: (+598) 2927·2347</p>
 				<p>contacto@urbanestate.com.ar</p>
-				<a href="http://www.facebook.com/urbanestatelive" target="_blank" style="color:#212529;">
+				<a href="http://www.facebook.com/urbanestatelive" target="_blank">
 					<i class="bi bi-facebook pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="http://www.instagram.com/urbanestatelive" target="_blank" style="color:#212529;">
+				<a href="http://www.instagram.com/urbanestatelive" target="_blank">
 					<i class="bi bi-instagram pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="https://www.youtube.com/@urbanestate4035" target="_blank" style="color:#212529;">
+				<a href="https://www.youtube.com/@urbanestate4035" target="_blank">
 					<i class="bi bi-youtube pe-4" style="font-size: 1.5rem;"></i>
 				</a>
-				<a href="https://www.linkedin.com/company/urban-estate-live/" target="_blank" style="color:#212529;">
+				<a href="https://www.linkedin.com/company/urban-estate-live/" target="_blank">
 					<i class="bi bi-linkedin pe-4" style="font-size: 1.5rem;"></i>
 				</a>
 
 				<div class="container mt-5">
 					<h3 class="col-7 row">SUMATE AL STAFF</h3>
 					<div class="row">
-						<button class="col-6 btn btn-light btn-card mt-1 mb-2 ps-4 pe-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm">Adjuntar datos</button>
+						<button class="col-4 btn btn-secondary btn-card mt-1 mb-2 ps-4 pe-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm">Adjuntar datos</button>
 					</div>					
 					<div class="collapse" id="collapseForm">
 						<?php echo do_shortcode('[contact-form-7 id="216" title="Staff"]'); ?>
