#46 submit form style

--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -76,7 +76,7 @@
 		 </select></td><td style='width:30%;'></td></tr>
  
 	 <tr><td colspan='2' style='text-align:center; padding-top:15px;'>
-		 <buton class="btn btn-secondary btn-card ps-5 pe-5 submit" style='cursor: pointer;' id='formsubmit' type='submit' value='Enviar' disabled >Enviar</buton> 
+		 <input class="submit" style='cursor: pointer;' id='formsubmit' type='submit' value='Enviar' disabled ></input> 
 		 <!-- <input type='reset' name='reset' style='cursor: pointer;color:#000000' value='Reset' ></input> </td> -->
 		</tr>
 	</table>
