--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -1,4 +1,4 @@
-<section id="contact-form" class="fluid mb-3 mt-5">
+<section id="contact-form" class="fluid pb-3 mb-5 mt-5">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-9 col-md-12">
@@ -60,7 +60,7 @@
 				<div>
 					<textarea name='Description' maxlength='32000'>&nbsp;</textarea>
 				</div>
-				<div class="row justify-content-center mt-5 mb-5">
+				<div class="row justify-content-lg-end justify-content-center mt-5 mb-5">
 					<div class='col-10 col-lg-7 g-recaptcha' data-sitekey='6LeUUfcUAAAAABSlqePdrrxomy5XdzSVxJsO8PBC' data-theme='light' data-callback='rccallback' captcha-verified='false' id='recap'></div>
 					<div class="col-6 col-lg-4 col-sm-4 mt-3">
 						<input class="submit ps-3 pe-3" style='cursor: pointer;' id='formsubmit' type='submit' value='Enviar' disabled ></input> 
@@ -154,25 +154,25 @@
 		</div>
 
 		<div class="col-lg-3 col-md-12 offset-lg-1 mt-lg-0 mt-5 mb-2">
-			<h3>SUMATE A LA FAMILIA</h3>
-			<p>ARGENTINA: (+5411) 5258·8788</p>
-			<p>URUGUAY: (+598) 2927·2347</p>
-			<p>contacto@urbanestate.com.ar</p>
+			<h4>SUMATE A LA FAMILIA</h4>
+			<p><b>ARGENTINA: (+5411) 5258·8788</b></p>
+			<p><b>URUGUAY: (+598) 2927·2347</b></p>
+			<p><b><a href="mailto:contacto@urbanestate.com.ar">contacto@urbanestate.com.ar</a></b></p>
 			<a href="http://www.facebook.com/urbanestatelive" target="_blank">
-				<i class="bi bi-facebook pe-4" style="font-size: 1.5rem;"></i>
+				<i class="bi bi-facebook pe-4 snih" style="font-size: 1.5rem;"></i>
 			</a>
 			<a href="http://www.instagram.com/urbanestatelive" target="_blank">
-				<i class="bi bi-instagram pe-4" style="font-size: 1.5rem;"></i>
+				<i class="bi bi-instagram pe-4 snih" style="font-size: 1.5rem;"></i>
 			</a>
 			<a href="https://www.youtube.com/@urbanestate4035" target="_blank">
-				<i class="bi bi-youtube pe-4" style="font-size: 1.5rem;"></i>
+				<i class="bi bi-youtube pe-4 snih" style="font-size: 1.5rem;"></i>
 			</a>
 			<a href="https://www.linkedin.com/company/urban-estate-live/" target="_blank">
-				<i class="bi bi-linkedin pe-4" style="font-size: 1.5rem;"></i>
+				<i class="bi bi-linkedin pe-4 snih" style="font-size: 1.5rem;"></i>
 			</a>
 
 			<div class="container mt-5 mb-5">
-				<h3 class="col row">SUMATE AL STAFF</h3>
+				<h4>SUMATE AL STAFF</h4>
 				<div class="row">
 					<button class="col-8 col-sm-8 offset-2 offset-lg-0 btn btn-secondary btn-card mt-2 mb-2 ps-3 pe-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm">Adjuntar datos</button>
 				</div>					
