--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -153,7 +153,7 @@
 		</div>
 		</div>
 
-		<div class="col-lg-3 col-md-12 offset-lg-1 mt-lg-0 mt-5 mb-2">
+		<div class="col-lg-3 col-md-12 offset-lg-1 mt-lg-0 mt-5 mb-2 centerm">
 			<h4>SUMATE A LA FAMILIA</h4>
 			<p><b>ARGENTINA: (+5411) 5258·8788</b></p>
 			<p><b>URUGUAY: (+598) 2927·2347</b></p>
