--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -62,9 +62,9 @@
 				</div>
 				<div class="row justify-content-lg-end justify-content-center mt-5 mb-5">
 					<div class='col-10 col-lg-7 g-recaptcha' data-sitekey='6LeUUfcUAAAAABSlqePdrrxomy5XdzSVxJsO8PBC' data-theme='light' data-callback='rccallback2682538000000282001' captcha-verified='false' id='recap2682538000000282001'></div>
-					<div  id='recapErr2682538000000282001' style='color:red;visibility:hidden;'>Error en validación de Captcha. Si no es un robot, inténtelo de nuevo.</div>
+					<div  id='recapErr2682538000000282001' style='color:red;visibility:hidden;'>Error en validación de Captcha.</div>
 					<div class="col-6 col-lg-4 col-sm-4 mt-3">
-						<input class="submit ps-3 pe-3" style='cursor: pointer;' id='formsubmitContact' type='submit' value='Enviar' disabled ></input> 
+						<input class="submit ps-3 pe-3" style='cursor: pointer;' id='formsubmitContact' type='submit' value='Enviar'></input> 
 					</div>
 
 					
@@ -126,7 +126,7 @@
 				  
 						 function checkMandatory2682538000000282001() {
 						  var mndFileds = new Array('First Name','Last Name','Email');
-						  var fldLangVal = new Array('Nombre','Apellido','Correo\x20electr\xF3nico');
+						  var fldLangVal = new Array('Nombre','Apellido','Email');
 						  for(i=0;i<mndFileds.length;i++) {
 							var fieldObj=document.forms['WebToLeads2682538000000282001'][mndFileds[i]];
 							if(fieldObj) {
