--- a/wp/wp-content/themes/ue-theme/inc/newsletter-form.html
+++ b/wp/wp-content/themes/ue-theme/inc/newsletter-form.html
@@ -163,7 +163,7 @@
 						  if(!validateEmail2682538000019468011()){return false;}
 						  
 						  if(!reCaptchaAlert2682538000019468011()){return false;}
-						  document.querySelector('.crmWebToEntityForm .formsubmitNews').setAttribute('disabled', true);
+						  document.querySelector('.crmWebToEntityForm .formsubmitNews').setAttribute('disabled', false);
 					  }
 				  
 				  function tooltipShow2682538000019468011(el){
