--- a/wp/wp-content/themes/ue-theme/inc/section-contacto.html
+++ b/wp/wp-content/themes/ue-theme/inc/section-contacto.html
@@ -21,7 +21,7 @@
   					<input type='text' style='display:none;' name='xmIwtLD' value='9a12965a9d6b0a4c6e6e6c002444cade9f4c426bdf7179aea378b2e901ec3a05'></input> 
   					<input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
   					<input type='text' style='display:none;' name='returnURL' value='http&#x3a;&#x2f;&#x2f;urbanestate.com.ar' > </input>
-	  			<!-- Do not remove this code. -->
+	  			<!-- Do not this code. -->
 				<style>
 					#crmWebToEntityForm tr , #crmWebToEntityForm td { 
 						padding:6px;
@@ -163,7 +163,7 @@
 						  if(!validateEmail2682538000000282001()){return false;}
 						  
 						  if(!reCaptchaAlert2682538000000282001()){return false;}
-						  document.querySelector('.crmWebToEntityForm .formsubmitContact').setAttribute('disabled', true);
+						  document.querySelector('.crmWebToEntityForm .formsubmitContact').setAttribute('disabled', false);
 					  }
 				  
 				  function tooltipShow2682538000000282001(el){
