Adding Toast and detection url paramener

--- a/wp/wp-content/themes/ue-theme/inc/newsletter-form.html
+++ b/wp/wp-content/themes/ue-theme/inc/newsletter-form.html
@@ -21,7 +21,7 @@
   					<input type='hidden' name='zc_gad' id='zc_gad' value=''></input> 
   					<input type='text' style='display:none;' name='xmIwtLD' value='9a12965a9d6b0a4c6e6e6c002444caded7d9cf2411d0f95bdd761527e0334fb6'></input> 
   					<input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
-  					<input type='text' style='display:none;' name='returnURL' value='http&#x3a;&#x2f;&#x2f;urbanestate.com.ar' > </input>
+  					<input type='text' style='display:none;' name='returnURL' value='http&#x3a;&#x2f;&#x2f;urbanestate.com.ar&#47;&#63;msg&#61;913716' > </input>
 	  			<!-- Do not remove this code. -->
 				<style>
 					#crmWebToEntityForm tr , #crmWebToEntityForm td { 
